force-app/main/default/objects/Quote/fields/Approval_Seal__c.field-meta.xml
<CustomField>
    <fullName>Approval_Seal__c</fullName>
    <defaultValue>IF ( $RecordType.DeveloperName = &quot;HHT_JTL&quot; ,  $Label.AP43_CONST_0005  , &quot;&quot;)</defaultValue>
    <label>承認印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>