force-app/main/default/objects/Quote/fields/Approval_Seal_LastName__c.field-meta.xml
<CustomField>
    <fullName>Approval_Seal_LastName__c</fullName>
    <label>承認印(姓)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>