force-app/main/default/objects/Quote/fields/BankCharges__c.field-meta.xml
<CustomField>
    <fullName>BankCharges__c</fullName>
    <formula>BankChargesRate__c * TotalCustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bank Charges = Bank Charges Rate * Total Customer Price</inlineHelpText>
    <label>Bank Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>