force-app/main/default/objects/Quote/fields/BankChargesRate__c.field-meta.xml
<CustomField>
    <fullName>BankChargesRate__c</fullName>
    <defaultValue>0.000</defaultValue>
    <label>Bank Charges Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>