force-app/main/default/objects/Quote/fields/CIFPrice__c.field-meta.xml
<CustomField>
    <fullName>CIFPrice__c</fullName>
    <formula>FOB_Price__c + OverseasFreightCostsEditable__c + BankCharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CIF Price = FOB Price Japan + Overseas Freight Costs + Bank Charges</inlineHelpText>
    <label>CIF Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>