force-app/main/default/objects/Quote/fields/Circles_Check__c.field-meta.xml
<CustomField>
    <fullName>Circles_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>丸印出力</label>
    <type>Checkbox</type>
</CustomField>