force-app/main/default/objects/Quote/fields/CO_DepartmentSeal_GovtOffice__c.field-meta.xml
<CustomField>
    <fullName>CO_DepartmentSeal_GovtOffice__c</fullName>
    <label>官公庁用部印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>