force-app/main/default/objects/Quote/fields/CommentsVisibleForClient__c.field-meta.xml
<CustomField>
    <fullName>CommentsVisibleForClient__c</fullName>
    <label>Comments Visible For Client</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>