force-app/main/default/objects/Quote/fields/Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Company_Information__c</fullName>
    <label>出力署名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本社</fullName>
            </value>
            <value>
                <fullName>神奈川</fullName>
            </value>
            <value>
                <fullName>名古屋</fullName>
            </value>
            <value>
                <fullName>豊田</fullName>
            </value>
            <value>
                <fullName>大阪</fullName>
            </value>
            <value>
                <fullName>中部支店 材料部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>