force-app/main/default/objects/Quote/fields/CompanySeal__c.field-meta.xml
<CustomField>
    <fullName>CompanySeal__c</fullName>
    <label>角印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>