force-app/main/default/objects/Quote/fields/Consumption_Tax__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Tax__c</fullName>
    <defaultValue>VALUE($Label.AP00_CONST_0002) / 100</defaultValue>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>