force-app/main/default/objects/Quote/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>担当者名(取引先責任者名)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>