force-app/main/default/objects/Quote/fields/CostPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>CostPriceLocal__c</fullName>
    <label>Local &amp; 3rd Party costs</label>
    <summarizedField>QuoteLineItem.CostTotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.JapanPurchase__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Option</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>