force-app/main/default/objects/Quote/fields/COWO_AccountName__c.field-meta.xml
<CustomField>
    <fullName>COWO_AccountName__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先名</label>
    <type>Text</type>
</CustomField>