force-app/main/default/objects/Quote/fields/COWO_Address1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Address1__c</fullName>
    <label>住所1</label>
    <length>52</length>
    <type>Text</type>
</CustomField>