force-app/main/default/objects/Quote/fields/COWO_Address2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Address2__c</fullName>
    <label>住所2</label>
    <length>52</length>
    <type>Text</type>
</CustomField>