force-app/main/default/objects/Quote/fields/COWO_Address__c.field-meta.xml
<CustomField>
    <fullName>COWO_Address__c</fullName>
    <label>宛名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>