force-app/main/default/objects/Quote/fields/COWO_AdminSystem__c.field-meta.xml
<CustomField>
    <fullName>COWO_AdminSystem__c</fullName>
    <formula>TEXT(Opportunity.SAWO_AdminSystem__c )</formula>
    <label>職制</label>
    <type>Text</type>
</CustomField>