force-app/main/default/objects/Quote/fields/COWO_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>COWO_Approval_Status__c</fullName>
    <label>承認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>未申請</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>申請中</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>承認済</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>