force-app/main/default/objects/Quote/fields/COWO_ApprovalDate1__c.field-meta.xml
<CustomField>
    <fullName>COWO_ApprovalDate1__c</fullName>
    <description>見積承認1が承認された日時</description>
    <label>見積承認日時1</label>
    <type>DateTime</type>
</CustomField>