force-app/main/default/objects/Quote/fields/COWO_ApprovalDate2__c.field-meta.xml
<CustomField>
    <fullName>COWO_ApprovalDate2__c</fullName>
    <description>見積承認2が承認された日時</description>
    <label>見積承認日時2</label>
    <type>DateTime</type>
</CustomField>