force-app/main/default/objects/Quote/fields/COWO_ApprovalSkipFlag__c.field-meta.xml
<CustomField>
    <fullName>COWO_ApprovalSkipFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認スキップフラグ</label>
    <type>Checkbox</type>
</CustomField>