force-app/main/default/objects/Quote/fields/COWO_ApprovalStartFlag__c.field-meta.xml
<CustomField>
    <fullName>COWO_ApprovalStartFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認申請開始フラグ</label>
    <type>Checkbox</type>
</CustomField>