force-app/main/default/objects/Quote/fields/COWO_Authorizer1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Authorizer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>COWO_Authorizer1</relationshipName>
    <type>Lookup</type>
</CustomField>