force-app/main/default/objects/Quote/fields/COWO_Authorizer2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Authorizer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>COWO_Authorizer2</relationshipName>
    <type>Lookup</type>
</CustomField>