force-app/main/default/objects/Quote/fields/COWO_Circulation__c.field-meta.xml
<CustomField>
    <fullName>COWO_Circulation__c</fullName>
    <defaultValue>1</defaultValue>
    <description>顧客へ提出した見積書の部数</description>
    <label>提出部数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>