force-app/main/default/objects/Quote/fields/COWO_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>COWO_Company_Name__c</fullName>
    <label>会社名</label>
    <length>37</length>
    <type>Text</type>
</CustomField>