force-app/main/default/objects/Quote/fields/COWO_CopyFlag__c.field-meta.xml
<CustomField>
    <fullName>COWO_CopyFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>見積コピー機能を使用して作成された見積の場合Trueとする。
当項目がTrueである場合AfterInsertトリガが起動されない</description>
    <label>コピーフラグ</label>
    <type>Checkbox</type>
</CustomField>