force-app/main/default/objects/Quote/fields/COWO_CopyFromQuote__c.field-meta.xml
<CustomField>
    <fullName>COWO_CopyFromQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コピー元見積</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>見積</relationshipLabel>
    <relationshipName>COWO_CopyFromQuote</relationshipName>
    <type>Lookup</type>
</CustomField>