force-app/main/default/objects/Quote/fields/COWO_CSR__c.field-meta.xml
<CustomField>
    <fullName>COWO_CSR__c</fullName>
    <label>Remarks</label>
    <length>20</length>
    <type>Text</type>
</CustomField>