force-app/main/default/objects/Quote/fields/COWO_Customer_Adopted_Quote__c.field-meta.xml
<CustomField>
    <fullName>COWO_Customer_Adopted_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>顧客採用見積</label>
    <type>Checkbox</type>
</CustomField>