force-app/main/default/objects/Quote/fields/COWO_Customer_Presented_Quote__c.field-meta.xml
<CustomField>
    <fullName>COWO_Customer_Presented_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>顧客提示済見積</label>
    <type>Checkbox</type>
</CustomField>