force-app/main/default/objects/Quote/fields/COWO_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>COWO_Delivery_Date__c</fullName>
    <label>納期</label>
    <length>46</length>
    <type>Text</type>
</CustomField>