force-app/main/default/objects/Quote/fields/COWO_Delivery_Place__c.field-meta.xml
<CustomField>
    <fullName>COWO_Delivery_Place__c</fullName>
    <label>受渡場所</label>
    <length>46</length>
    <type>Text</type>
</CustomField>