force-app/main/default/objects/Quote/fields/COWO_DeliveryPlace_Univ_GovtOffice__c.field-meta.xml
<CustomField>
    <fullName>COWO_DeliveryPlace_Univ_GovtOffice__c</fullName>
    <label>受渡場所(大学・官公庁用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>