force-app/main/default/objects/Quote/fields/COWO_Department1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Department1__c</fullName>
    <label>部署1</label>
    <length>52</length>
    <type>Text</type>
</CustomField>