force-app/main/default/objects/Quote/fields/COWO_Department2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Department2__c</fullName>
    <label>部署2</label>
    <length>52</length>
    <type>Text</type>
</CustomField>