force-app/main/default/objects/Quote/fields/COWO_Department_Manager__c.field-meta.xml
<CustomField>
    <fullName>COWO_Department_Manager__c</fullName>
    <label>部長名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>