force-app/main/default/objects/Quote/fields/COWO_DepartmentSeal__c.field-meta.xml
<CustomField>
    <fullName>COWO_DepartmentSeal__c</fullName>
    <label>角印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>