force-app/main/default/objects/Quote/fields/COWO_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>COWO_Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>値引金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>