force-app/main/default/objects/Quote/fields/COWO_Discount_Amount_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_Discount_Amount_Rate__c</fullName>
    <formula>if(
OR(
TotalPrice== 0
, ISBLANK(TotalPrice)
, ISNULL(TotalPrice)
),
0 ,
COWO_Discount_Amount__c/ TotalPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>