force-app/main/default/objects/Quote/fields/COWO_Fertility_Discount1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Fertility_Discount1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>出精値引き１</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>