force-app/main/default/objects/Quote/fields/COWO_Fertility_Discount_Title1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Fertility_Discount_Title1__c</fullName>
    <description>見積書に出精値引1のタイトルとして表示する文字列</description>
    <inlineHelpText>見積書に出精値引1のタイトルとして表示するテキストを16字（全角文字8字）以内で入力してください。</inlineHelpText>
    <label>出精値引1_タイトル</label>
    <length>16</length>
    <type>Text</type>
</CustomField>