force-app/main/default/objects/Quote/fields/COWO_Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>COWO_Final_Amount__c</fullName>
    <formula>TotalPrice -  COWO_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>