force-app/main/default/objects/Quote/fields/COWO_Final_Amount_Discount_Exclude__c.field-meta.xml
<CustomField>
    <fullName>COWO_Final_Amount_Discount_Exclude__c</fullName>
    <label>見積最終金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>