force-app/main/default/objects/Quote/fields/COWO_Final_Amount_HDA_Exclude__c.field-meta.xml
<CustomField>
    <fullName>COWO_Final_Amount_HDA_Exclude__c</fullName>
    <formula>TotalPrice - COWO_Header_Discount_Amount__c - (TotalPrice * COWO_Header_Discount_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終金額(ヘッダ値引き抜き)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>