force-app/main/default/objects/Quote/fields/COWO_Final_Amount_Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>COWO_Final_Amount_Tax_Included__c</fullName>
    <formula>COWO_Final_Amount__c +  COWO_Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終金額(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>