force-app/main/default/objects/Quote/fields/COWO_FollowApproval__c.field-meta.xml
<CustomField>
    <fullName>COWO_FollowApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>承認者が追認処理を実施した際にチェックを付けます。</description>
    <label>追認承認</label>
    <type>Checkbox</type>
</CustomField>