force-app/main/default/objects/Quote/fields/COWO_FollowApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_FollowApprovalDate__c</fullName>
    <description>追認を実施した時間が登録されます。</description>
    <label>追認日付</label>
    <type>DateTime</type>
</CustomField>