force-app/main/default/objects/Quote/fields/COWO_FollowApprovalDeadLine__c.field-meta.xml
<CustomField>
    <fullName>COWO_FollowApprovalDeadLine__c</fullName>
    <formula>/*追認されてれば緑*/
IF( COWO_FollowApproval__c,
&quot;/img/samples/flag_green.gif&quot;,
/*5日経過後の画像*/
IF ( TODAY() - DATEVALUE(COWO_LastApproveDate__c) &gt;= 5 ,
&quot;/img/samples/flag_red.gif&quot;,
/*5日以内の画像*/
IF ( TODAY() - DATEVALUE(COWO_LastApproveDate__c) &lt; 5 ,
&quot;/img/samples/flag_green.gif&quot;,
/*その他用*/
&quot;&quot;)
)
)</formula>
    <label>追認締切</label>
    <type>Text</type>
</CustomField>