force-app/main/default/objects/Quote/fields/COWO_FollowApprover__c.field-meta.xml
<CustomField>
    <fullName>COWO_FollowApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>見積の追認実施者が設定されます。</description>
    <label>追認承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FollowApproverUsers</relationshipName>
    <type>Lookup</type>
</CustomField>