force-app/main/default/objects/Quote/fields/COWO_Gross_Profit_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_Gross_Profit_Rate__c</fullName>
    <formula>IF(
OR(
COWO_Final_Amount__c == 0
, ISBLANK(COWO_Final_Amount__c)
, ISNULL(COWO_Final_Amount__c)
),
0 ,
COWO_Gross_Profit__c / COWO_Final_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利益率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>