force-app/main/default/objects/Quote/fields/COWO_Header_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_Header_Discount_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ヘッダ値引き(割引率)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>