force-app/main/default/objects/Quote/fields/COWO_HeaderPage_Logo__c.field-meta.xml
<CustomField>
    <fullName>COWO_HeaderPage_Logo__c</fullName>
    <label>HeaderPage_Logo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>