force-app/main/default/objects/Quote/fields/COWO_HeaderPage_SubTitle__c.field-meta.xml
<CustomField>
    <fullName>COWO_HeaderPage_SubTitle__c</fullName>
    <label>HeaderPage_SubTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>