force-app/main/default/objects/Quote/fields/COWO_HHT_Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>COWO_HHT_Total_Profit__c</fullName>
    <formula>COWO_Final_Amount__c -  COWO_Total_TC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終金額 - TC合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>