force-app/main/default/objects/Quote/fields/COWO_Imprint1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Imprint1__c</fullName>
    <label>押印1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>