force-app/main/default/objects/Quote/fields/COWO_Imprint2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Imprint2__c</fullName>
    <label>押印2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>