force-app/main/default/objects/Quote/fields/COWO_Imprint3__c.field-meta.xml
<CustomField>
    <fullName>COWO_Imprint3__c</fullName>
    <label>押印3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>