force-app/main/default/objects/Quote/fields/COWO_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>COWO_Incoterms__c</fullName>
    <label>インコタームズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>