force-app/main/default/objects/Quote/fields/COWO_Install_Adjust_Cost__c.field-meta.xml
<CustomField>
    <fullName>COWO_Install_Adjust_Cost__c</fullName>
    <label>据付調整費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>