force-app/main/default/objects/Quote/fields/COWO_LastApproveDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_LastApproveDate__c</fullName>
    <description>最後に見積承認が実施された日時が設定される</description>
    <formula>IF ( ISBLANK(  COWO_ApprovalDate2__c ) , COWO_ApprovalDate1__c, COWO_ApprovalDate2__c)</formula>
    <label>見積承認日時最終</label>
    <type>DateTime</type>
</CustomField>