force-app/main/default/objects/Quote/fields/COWO_LocalCorporationTC_Profit_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_LocalCorporationTC_Profit_Rate__c</fullName>
    <formula>if(
OR(
 COWO_Final_Amount__c == 0
, ISBLANK(COWO_Final_Amount__c)
, ISNULL(COWO_Final_Amount__c)
),
0 ,
COWO_LocalCorporationTC_Total_Profit__c / COWO_Final_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>現法利益率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>