force-app/main/default/objects/Quote/fields/COWO_LocalCorporationTC_Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>COWO_LocalCorporationTC_Total_Profit__c</fullName>
    <formula>COWO_Final_Amount__c  -  COWO_Total_LocalCorporationTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終金額－現法TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>