force-app/main/default/objects/Quote/fields/COWO_ManagerPost__c.field-meta.xml
<CustomField>
    <fullName>COWO_ManagerPost__c</fullName>
    <label>ManagerPost</label>
    <length>200</length>
    <type>Text</type>
</CustomField>