force-app/main/default/objects/Quote/fields/COWO_ManagerSeal__c.field-meta.xml
<CustomField>
    <fullName>COWO_ManagerSeal__c</fullName>
    <label>部長印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>