force-app/main/default/objects/Quote/fields/COWO_OpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_OpportunityCloseDate__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>完了予定日</label>
    <type>Date</type>
</CustomField>