force-app/main/default/objects/Quote/fields/COWO_OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>COWO_OpportunityName__c</fullName>
    <formula>Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談名</label>
    <type>Text</type>
</CustomField>