force-app/main/default/objects/Quote/fields/COWO_OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>COWO_OpportunityStageName__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>フェーズ</label>
    <type>Text</type>
</CustomField>