force-app/main/default/objects/Quote/fields/COWO_Owner__c.field-meta.xml
<CustomField>
    <fullName>COWO_Owner__c</fullName>
    <formula>Opportunity.Owner.LastName &amp; &quot; &quot; &amp; Opportunity.Owner.FirstName</formula>
    <label>担当者</label>
    <type>Text</type>
</CustomField>