force-app/main/default/objects/Quote/fields/COWO_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>COWO_Payment_Terms__c</fullName>
    <label>支払条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>