force-app/main/default/objects/Quote/fields/COWO_PaymentTerms_Univ_GovtOffice__c.field-meta.xml
<CustomField>
    <fullName>COWO_PaymentTerms_Univ_GovtOffice__c</fullName>
    <label>支払条件 (大学官公庁)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>