force-app/main/default/objects/Quote/fields/COWO_President__c.field-meta.xml
<CustomField>
    <fullName>COWO_President__c</fullName>
    <label>社長名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>