force-app/main/default/objects/Quote/fields/COWO_Quote_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>COWO_Quote_Create_Date__c</fullName>
    <label>見積日</label>
    <type>Date</type>
</CustomField>