force-app/main/default/objects/Quote/fields/COWO_QuoteExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_QuoteExpirationDate__c</fullName>
    <inlineHelpText>見積有効期限の日数を入力します。3桁まで入力可能です。</inlineHelpText>
    <label>見積有効期限</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>