force-app/main/default/objects/Quote/fields/COWO_QuoteLineItem_inactive__c.field-meta.xml
<CustomField>
    <fullName>COWO_QuoteLineItem_inactive__c</fullName>
    <label>見積品目無効チェック</label>
    <summaryFilterItems>
        <field>QuoteLineItem.COWO_QuoteLineItem_IsActive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>