force-app/main/default/objects/Quote/fields/COWO_QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>COWO_QuoteNumber__c</fullName>
    <label>見積番号</label>
    <length>22</length>
    <type>Text</type>
</CustomField>