force-app/main/default/objects/Quote/fields/COWO_Remarks_Bottom2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Remarks_Bottom2__c</fullName>
    <description>見積書の明細下にある備考欄2行目</description>
    <inlineHelpText>見積書明細下にある備考欄2行目に記載します。100字以内で入力ください。</inlineHelpText>
    <label>総計部備考2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>