force-app/main/default/objects/Quote/fields/COWO_Remarks_Bottom3__c.field-meta.xml
<CustomField>
    <fullName>COWO_Remarks_Bottom3__c</fullName>
    <inlineHelpText>欄外の備考欄の3行目を入力します。</inlineHelpText>
    <label>総計部備考3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>