force-app/main/default/objects/Quote/fields/COWO_Remarks_Univ_GovtOffice__c.field-meta.xml
<CustomField>
    <fullName>COWO_Remarks_Univ_GovtOffice__c</fullName>
    <label>ヘッダ部備考（大学・官公庁用）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>