force-app/main/default/objects/Quote/fields/COWO_Report_Item_Flag__c.field-meta.xml
<CustomField>
    <fullName>COWO_Report_Item_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>見積帳票明細(一式)</label>
    <type>Checkbox</type>
</CustomField>