force-app/main/default/objects/Quote/fields/COWO_Report_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>COWO_Report_PaymentTerms__c</fullName>
    <description>帳票用支払条件</description>
    <label>支払条件</label>
    <length>46</length>
    <type>Text</type>
</CustomField>