force-app/main/default/objects/Quote/fields/COWO_Report_Remarks1__c.field-meta.xml
<CustomField>
    <fullName>COWO_Report_Remarks1__c</fullName>
    <description>別紙備考に入力するテキスト1行目の値</description>
    <inlineHelpText>別紙備考に入力するテキスト1行目の値を半角152文字（全角76文字）以内で入力ください。</inlineHelpText>
    <label>別紙備考1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>