force-app/main/default/objects/Quote/fields/COWO_Report_Remarks2__c.field-meta.xml
<CustomField>
    <fullName>COWO_Report_Remarks2__c</fullName>
    <label>別紙備考2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>