force-app/main/default/objects/Quote/fields/COWO_Report_Remarks__c.field-meta.xml
<CustomField>
    <fullName>COWO_Report_Remarks__c</fullName>
    <description>帳票用備考</description>
    <label>ヘッダ部備考</label>
    <length>46</length>
    <type>Text</type>
</CustomField>