force-app/main/default/objects/Quote/fields/COWO_Sales_Desired_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>COWO_Sales_Desired_Delivery_Date__c</fullName>
    <label>営業希望納期</label>
    <type>Date</type>
</CustomField>