force-app/main/default/objects/Quote/fields/COWO_Scheduled_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>COWO_Scheduled_Completion_Date__c</fullName>
    <label>完成予定日</label>
    <type>Date</type>
</CustomField>