force-app/main/default/objects/Quote/fields/COWO_StageName__c.field-meta.xml
<CustomField>
    <fullName>COWO_StageName__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00.案件の見込み</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01.案件の見極め</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02.製品価値の訴求</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03.意思決定者との合意</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04.受注要件の確定</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05.契約締結・調整</label>
            </value>
            <value>
                <fullName>06Won</fullName>
                <label>06.受注</label>
            </value>
            <value>
                <fullName>06Lost</fullName>
                <label>06.失注</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>