force-app/main/default/objects/Quote/fields/COWO_SVF_DiscoutAmount1__c.field-meta.xml
<CustomField>
    <fullName>COWO_SVF_DiscoutAmount1__c</fullName>
    <label>見積書御値引額1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>