force-app/main/default/objects/Quote/fields/COWO_SVF_DiscoutText2__c.field-meta.xml
<CustomField>
    <fullName>COWO_SVF_DiscoutText2__c</fullName>
    <label>見積書御値引テキスト2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>