force-app/main/default/objects/Quote/fields/COWO_SVF_DiscoutText3__c.field-meta.xml
<CustomField>
    <fullName>COWO_SVF_DiscoutText3__c</fullName>
    <label>見積書御値引テキスト3</label>
    <length>16</length>
    <type>Text</type>
</CustomField>