force-app/main/default/objects/Quote/fields/COWO_Tax_Included_Flag__c.field-meta.xml
<CustomField>
    <fullName>COWO_Tax_Included_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>税込</label>
    <type>Checkbox</type>
</CustomField>