force-app/main/default/objects/Quote/fields/COWO_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_Tax_Rate__c</fullName>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>